# bampkgbuild

./: .gitignore  Dockerfile  Dockerfile-security  Dockerfile-security-bullseye  README.rst  build_all.sh  build_rdepends  create_schroot  depends  download  flake.nix  pyproject.toml  redhat.txt  release  release.bak  source  update_schroot
bampkgbuild/: docker.py  main.py
tools/: grep-sources
