[project]
name = "bampkgbuild"
version = "0.0.1"
description = "Build Debian packages in containers"
authors = [ {name="Brian May", email="brian@linuxpenguins.xyz"}, ]
readme = "README.rst"
dependencies = [
    "colorlog == 6.9.0",
    "python-debian == 0.1.49",]
requires-python = ">=3.9"

[project.scripts]
bampkgbuild = "bampkgbuild.main:main"

[project.optional-dependencies]
dev = [
    "python-lsp-server == 1.12.2",
    "python-lsp-ruff == 2.2.2",
    "python-lsp-black == 2.0.0",
    "pylsp-mypy == 0.7.0",]
